--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300');
-/*@import url('https://fonts.googleapis.com/css?family=Montserrat:300');*/
+
 body{
     overflow-x: hidden;
     font-family: 'Oxygen', sans-serif;
@@ -18,6 +18,9 @@ body{
 .media-content{
     padding-left: 5px;
     padding-right: 5px;
+  }
+  .is-invisibile{
+      visibility: hidden;
   }
 .day{
     padding: 12px;
@@ -44,6 +47,11 @@ body{
     display: flex;
     align-content: center;
     padding-right: 10px;
+}
+.add-client-box-container{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 .day-date-title{
     color: #eee;
